# roman-magnitudes

./: .gitignore  LICENSE  README.md  pyproject.toml  roman_magnitudes.ipynb
roman_magnitudes/: __init__.py  models.py
roman_magnitudes/data/: aebv_factor.csv  all_schemes_coefficients.csv  zero_points_20250707.csv
roman_magnitudes/tests/: test_models.py
